# OrbitWatch

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  requirements.txt
backend/: main.py
backend/core/: coordinate_transforms.py  propagator.py  tle_fetcher.py
backend/models/: schemas.py
backend/routers/: satellites.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  clock.js  config.example.js  controls.js  info-panel.js  satellites.js
misc/: README.md
misc/spacetrk/: ACTAN.FOR  DEEP.FOR  DRIVER.FOR  FMOD2P.FOR  SDP8.FOR  SGP.FOR  SGP4.FOR  SGP8.FOR  THETAG.FOR
orbitcore/: CMakeLists.txt
orbitcore/include/: hello.h
orbitcore/src/: bindings.cpp  hello.cpp
progress/: roadmap.md  scaling_tracker.md  week0_setup.md  week2_plan.md  week3_plan.md  week4_plan.md  week5_plan.md  week6_plan.md
progress/notes/: README.md  key_information.md  week0_notes.md  week2_notes.md  week3_notes.md  week4_notes.md  week5_notes.md
progress/task_logs/: README.md  task_2_1_gp_data_fetcher.md  task_2_2_coordinate_transforms.md  task_2_3_cpp_sgp4_engine.md  task_2_4_propagator_wrapper.md  task_3_1_fastapi_skeleton.md  task_3_2_satellite_list.md  task_3_3_position_endpoints.md  task_3_4_data_refresh.md  task_3_5_pydantic_models.md  task_4_1_cesium_setup.md  task_4_2_satellite_points.md  task_4_3_4_info_panel_orbit_trail.md  task_5_1_3_nadir_line_controls.md  task_5_2_time_controls.md
tests/: test_api.py  test_coordinate_transforms.py  test_gp_fetcher.py  test_propagator.py  test_sgp4_cpp.py  test_spice.py
(+10 files in other folders)
